make it possible to use java 8